[package]
name = "surreal_orm"
version = "0.1.0"
edition = "2021"
authors = ["Echo <tgxz2000@gmail.com>"]
description = "SurrealDB ORM"
license = "MIT"
readme = "README.md"
repository = "https://github.com/EchoRust/surreal-orm"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
